# devoops-argocd

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  index.html  restart-k8s.sh
.claude/: settings.json
apps/satellite-simulator/: Dockerfile  pyproject.toml
apps/satellite-simulator/app/: main.py  orbit.py  payload.py  power.py  producer.py  satellite.py  states.py  telemetry.py  thermal.py
apps/satellite-simulator/tests/: test_orbit.py  test_payload.py  test_power.py  test_producer.py  test_satellite.py  test_states.py  test_telemetry.py  test_thermal.py
apps/spark-job/job-streaming-satellite/: .dockerignore  Dockerfile  build-and-push.sh  main.py  pyproject.toml
apps/spark-job/job-streaming-satellite/stream/: job.py  schema.py
argocd/: application.yaml  apply-all.sh  argocd-ingress.yaml  hbase-application.yaml  iceberg-application.yaml  jupyter-application.yaml  kafka-application.yaml  kafka-ui-application.yaml  minio-application.yaml  my-hbase-application.yaml  postgresql-application.yaml  satellite-simulator-application.yaml  spark-application.yaml  spark-jobs-application.yaml  spark-operator-application.yaml
bootstrap/: infrastructure.yaml
docs/: architecture.md
hbase/: Chart.yaml  values.yaml
iceberg/: values.yaml
jupyter/: Chart.yaml  README.md  values.yaml
kafka/: Chart.yaml
kafka-ui/: values.yaml
my-hbase/: Chart.yaml  values.yaml
my-web/: values.yaml
postgresql/: Chart.yaml  values.yaml
satellite-simulator/: Chart.yaml  values.yaml
satellite-stream/: Chart.yaml
spark/: Chart.yaml  (+1 more)
spark-jobs/: job-general.yaml  (+1 more)
(+88 files in other folders)
