[project]
name = "satellite-stream"
version = "0.1.0"
description = "Spark Structured Streaming job: Kafka satellite-telemetry → Iceberg bronze layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==3.5.3",
]

[project.scripts]
satellite-stream = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "chispa>=0.9",   # DataFrame equality assertions for PySpark tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stream"]
